Update memory models to cmm, lmm, xmmc, xmm-split, xmm-single

--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -30,10 +30,10 @@ all:
 	$(MAKE) -C PropWare_SPI/Debug -f ../Makefile
 
 	$(shell mkdir $(MKDIR_FLAG) PropWare_SimplexUART$(DIR_DIV)Debug $(NULL))
-	$(MAKE) -C PropWare_UART/Debug -f ../Makefile
+	$(MAKE) -C PropWare_SimplexUART/Debug -f ../Makefile
 
 	$(shell mkdir $(MKDIR_FLAG) PropWare_DuplexUART$(DIR_DIV)Debug $(NULL))
-	$(MAKE) -C PropWare_UART/Debug -f ../Makefile
+	$(MAKE) -C PropWare_DuplexUART/Debug -f ../Makefile
 
 	$(shell mkdir $(MKDIR_FLAG) PropWare_I2C_HD44780$(DIR_DIV)Debug $(NULL))
 	$(MAKE) -C Concurrency/Debug -f ../Makefile
@@ -70,10 +70,10 @@ clean:
 	$(MAKE) -C PropWare_SPI/Debug -f ../Makefile clean
 
 	$(shell mkdir $(MKDIR_FLAG) PropWare_SimplexUART$(DIR_DIV)Debug $(NULL))
-	$(MAKE) -C PropWare_UART/Debug -f ../Makefile clean
+	$(MAKE) -C PropWare_SimplexUART/Debug -f ../Makefile clean
 
 	$(shell mkdir $(MKDIR_FLAG) PropWare_DuplexUART$(DIR_DIV)Debug $(NULL))
-	$(MAKE) -C PropWare_UART/Debug -f ../Makefile clean
+	$(MAKE) -C PropWare_DuplexUART/Debug -f ../Makefile clean
 
 	$(shell mkdir $(MKDIR_FLAG) PropWare_I2C_HD44780$(DIR_DIV)Debug $(NULL))
 	$(MAKE) -C Concurrency/Debug -f ../Makefile clean
