--- a/PropWare/xmm-single/Makefile
+++ b/PropWare/xmm-single/Makefile
@@ -1,14 +1,14 @@
-# Build the Simple library with the extended memory model (XMM)
-PRJ = Libpropeller_xmm
+# Build the PropWare library with the extended memory model single (XMM-Single)
+PRJ = PropWare_xmm-single
 
 LIBNAME = $(PRJ)
-include ../libpropellerObjects.mk
-MODEL = xmm
+BOARD = QUICKSTART
+MODEL = xmm-single
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
 ifndef PROPWARE_PATH
-	PROPWARE_PATH=..
+	PROPWARE_PATH = ..
 endif
 
 # Optionally, specify where your compiler is installed
@@ -17,4 +17,5 @@ ifndef PROPGCC_PREFIX
 	PROPGCC_PREFIX = /path/to/compiler/directory
 endif
 
-include ../libpropeller.mk
+include ../PropWareObjects.mk
+include ../../common.mk
