--- a/libpropeller/source/Makefile
+++ b/libpropeller/source/Makefile
@@ -2,12 +2,14 @@ all:
 	$(MAKE) -C cog
 	$(MAKE) -C cmm
 	$(MAKE) -C lmm
-	$(MAKE) -C xmm
 	$(MAKE) -C xmmc
+	$(MAKE) -C xmm-single
+	$(MAKE) -C xmm-split
 
 clean:
 	$(MAKE) -C cog clean
 	$(MAKE) -C cmm clean
 	$(MAKE) -C lmm clean
-	$(MAKE) -C xmm clean
 	$(MAKE) -C xmmc clean
+	$(MAKE) -C xmm-single clean
+	$(MAKE) -C xmm-split clean
