--- a/simple/xmm-split/Makefile
+++ b/simple/xmm-split/Makefile
@@ -1,14 +1,14 @@
-# Build the PropWare library with the extended memory model (XMM)
-PRJ = PropWare_xmm
+# Build the Simple library with the extended memory model - split(XMM-Split)
+PRJ = Simple_xmm-split
 
 LIBNAME = $(PRJ)
-BOARD = QUICKSTART
-MODEL = xmm
+include ../simpleObjects.mk
+MODEL = xmm-split
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
 ifndef PROPWARE_PATH
-	PROPWARE_PATH = ..
+	PROPWARE_PATH=..
 endif
 
 # Optionally, specify where your compiler is installed
@@ -17,5 +17,4 @@ ifndef PROPGCC_PREFIX
 	PROPGCC_PREFIX = /path/to/compiler/directory
 endif
 
-include ../PropWareObjects.mk
-include ../../common.mk
+include ../simple.mk
