Almost there. Not adding .S into library archives

--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,19 @@
 /libpropeller
 /Examples/TestApp
 /.external_downloads
-/Makefile
 CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
+CMakeLists.txt.user
 __pycache__
 .cproject
 .**project
+**.cbp
 objects.mk
 sources.mk
 subdir.mk
 makefile
+Makefile
 **.elf
 **.o
 **.a
