--- a/PropWare/lmm/CMakeLists.txt
+++ b/PropWare/lmm/CMakeLists.txt
@@ -4,7 +4,7 @@ set(MODEL lmm)
 project(PropWare_${MODEL})
 set(CMAKE_PROJECT_NAME PropWare_${MODEL})
 
-add_library(${CMAKE_PROJECT_NAME} STATIC ../PropWare ../spi ../sd)
+add_library(${CMAKE_PROJECT_NAME} STATIC ../PropWare ../spi ../spi_as.S ../sd)
 
 set(BOARD QUICKSTART)
 set(CFLAGS "-Os")
@@ -13,4 +13,4 @@ if (NOT DEFINED PROPWARE_PATH)
     set(PROPWARE_PATH $ENV{PROPWARE_PATH})
 endif (NOT DEFINED PROPWARE_PATH)
 
-include(${PROPWARE_PATH}/CMake_header.cmake)
+include(${PROPWARE_PATH}/PropellerToolchain.cmake)
