--- a/simple/lmm/CMakeLists.txt
+++ b/simple/lmm/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required (VERSION 2.6.4)
 
-set(MODEL xmm-split)
-project(PropWare_${MODEL})
-set(CMAKE_PROJECT_NAME PropWare_${MODEL})
+set(MODEL lmm)
+project(Simple_${MODEL})
+set(CMAKE_PROJECT_NAME Simple_${MODEL})
 
-add_library(${CMAKE_PROJECT_NAME} STATIC ../PropWare ../spi ../spi_as.S ../sd)
+include(../simpleObjects.cmake)
+
+add_library(${CMAKE_PROJECT_NAME} STATIC ${SIMPLE_OBJECTS})
 
 set(BOARD QUICKSTART)
 set(CFLAGS "-Os")
