--- a/Examples/PropWare_L3G/CMakeLists.txt
+++ b/Examples/PropWare_L3G/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 2.6.4)
 project(L3G_Demo)
 set(CMAKE_PROJECT_NAME L3G_Demo)
 
-add_executable(${CMAKE_PROJECT_NAME} ${CMAKE_PROJECT_NAME}.cpp)
+add_executable(${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.cpp)
 
 set(BOARD QUICKSTART)
 set(MODEL lmm)
