"Add" header files to library; Fix numerous warnings thrown by IntelliJ

--- a/PropWare/xmm-single/CMakeLists.txt
+++ b/PropWare/xmm-single/CMakeLists.txt
@@ -4,7 +4,18 @@ set(MODEL xmm-single)
 project(PropWare_${MODEL})
 set(CMAKE_PROJECT_NAME PropWare_${MODEL})
 
-add_library(${CMAKE_PROJECT_NAME} STATIC ../PropWare ../spi ../spi_as.S ../sd)
+add_library(${CMAKE_PROJECT_NAME} STATIC
+        ../hd44780
+        ../l3g
+        ../max6675
+        ../mcp3000
+        ../pin
+        ../port
+        ../PropWare
+        ../sd
+        ../spi
+        ../spi_as.S
+        ../uart)
 
 set(BOARD QUICKSTART)
 set(CFLAGS "-Os")
