--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.6.4)
 
+set(PROPWARE_MAIN_PACKAGE 1)
+
 add_subdirectory(simple)
 add_subdirectory(libpropeller)
 add_subdirectory(PropWare)
