--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /libpropeller
 /Examples/TestApp
 /.external_downloads
-CMakeFiles/
+CMakeFiles
 CMakeCache.txt
 cmake_install.cmake
 CMakeLists.txt.user
