--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_subdirectory(Concurrency)
-add_subdirectory(PropWare)
 add_subdirectory(PropWare_DuplexUART)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MCP3000)
+add_subdirectory(PropWare_MultiCogBlinky)
 add_subdirectory(PropWare_SD)
 add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_SPI)
