More refactoring/bugfixes in CMake files

--- a/Examples/PropWare_DuplexUART/CMakeLists.txt
+++ b/Examples/PropWare_DuplexUART/CMakeLists.txt
@@ -7,7 +7,11 @@ endif (NOT DEFINED PROPWARE_PATH)
 set(BOARD QUICKSTART)
 set(MODEL lmm)
 set(CFLAGS "-Os")
+set(CXXFLAGS )
 set(CMAKE_TOOLCHAIN_FILE ${PROPWARE_PATH}/PropellerToolchain.cmake)
+if (DEFINED PROPWARE_MAIN_PACKAGE)
+    include(${PROPWARE_PATH}/Generic-gcc-Propeller.cmake)
+endif (DEFINED PROPWARE_MAIN_PACKAGE)
 
 project(DuplexUART_Demo)
 
