--- a/PropWare/lmm/CMakeLists.txt
+++ b/PropWare/lmm/CMakeLists.txt
@@ -3,13 +3,15 @@ cmake_minimum_required (VERSION 2.6.4)
 if (NOT DEFINED PROPWARE_PATH)
     set(PROPWARE_PATH $ENV{PROPWARE_PATH})
 endif (NOT DEFINED PROPWARE_PATH)
-set(CMAKE_TOOLCHAIN_FILE $ENV{PROPWARE_PATH}/PropellerToolchain.cmake)
 
+set(CFLAGS "-Os")
+set(CXXFLAGS )
 set(MODEL lmm)
-project(PropWare_${MODEL})
-set(CMAKE_PROJECT_NAME PropWare_${MODEL})
+include(${PROPWARE_PATH}/Generic-gcc-Propeller.cmake)
 
-add_library(${CMAKE_PROJECT_NAME} STATIC
+project(PropWare_${MODEL})
+
+add_library(${PROJECT_NAME} STATIC
         ../hd44780
         ../l3g
         ../max6675
@@ -21,10 +23,3 @@ add_library(${CMAKE_PROJECT_NAME} STATIC
         ../spi
         ../spi_as.S
         ../uart)
-
-set(BOARD QUICKSTART)
-set(CFLAGS "-Os")
-
-if (NOT DEFINED PROPWARE_PATH)
-    set(PROPWARE_PATH $ENV{PROPWARE_PATH})
-endif (NOT DEFINED PROPWARE_PATH)
