--- a/libpropeller/source/xmm-split/CMakeLists.txt
+++ b/libpropeller/source/xmm-split/CMakeLists.txt
@@ -1,16 +1,15 @@
 cmake_minimum_required (VERSION 2.6.4)
 
-set(MODEL xmm-split)
-project(Libpropeller_${MODEL})
-set(CMAKE_PROJECT_NAME Libpropeller_${MODEL})
-
-include(../libpropellerObjects.cmake)
-
-add_library(${CMAKE_PROJECT_NAME} STATIC ${LIBPROPELLER_OBJECTS})
-
-set(BOARD QUICKSTART)
-set(CFLAGS "-Os")
-
 if (NOT DEFINED PROPWARE_PATH)
     set(PROPWARE_PATH $ENV{PROPWARE_PATH})
 endif (NOT DEFINED PROPWARE_PATH)
+
+set(CFLAGS "-Os")
+set(CXXFLAGS )
+set(MODEL xmm-split)
+include(${PROPWARE_PATH}/Generic-gcc-Propeller.cmake)
+
+project(Libpropeller_${MODEL})
+
+include(../libpropellerObjects.cmake)
+add_library(${PROJECT_NAME} STATIC ${LIBPROPELLER_OBJECTS})
