--- a/libpropeller/source/cog/CMakeLists.txt
+++ b/libpropeller/source/cog/CMakeLists.txt
@@ -7,7 +7,7 @@ endif (NOT DEFINED PROPWARE_PATH)
 set(CFLAGS "-Os")
 set(CXXFLAGS )
 set(MODEL cog)
-include(${PROPWARE_PATH}/Generic-gcc-Propeller.cmake)
+include(${PROPWARE_PATH}/CMakeModules/Generic-gcc-Propeller.cmake)
 
 project(Libpropeller_${MODEL})
 
