--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required (VERSION 2.6.4)
 
 set(CMAKE_TOOLCHAIN_FILE ./PropellerToolchain.cmake)
 set (CMAKE_BUILD_TYPE None)
-project(PropWare C CXX ASM COGC COGCXX)
+project(PropWare C CXX ASM COGC COGCXX ECOGC ECOGCXX)
 
 set(PROPWARE_MAIN_PACKAGE 1)
 
