--- a/libpropeller/source/cog/CMakeLists.txt
+++ b/libpropeller/source/cog/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 3.0.0)
 
 if (NOT DEFINED PROPWARE_PATH)
     set(PROPWARE_PATH $ENV{PROPWARE_PATH})
-    file(TO_NATIVE_PATH PROPWARE_PATH ${PROPWARE_PATH})
+    file(TO_CMAKE_PATH ${PROPWARE_PATH} PROPWARE_PATH)
 endif (NOT DEFINED PROPWARE_PATH)
 
 set(COMMON_FLAGS "-Os")
