More changes to CMake in the hopes of fixing things betterer

--- a/CMakeModules/CMakeCOGCXXCompiler.cmake.in
+++ b/CMakeModules/CMakeCOGCXXCompiler.cmake.in
@@ -19,8 +19,8 @@ set(CMAKE_COMPILER_IS_CYGWIN @CMAKE_COMPILER_IS_CYGWIN@)
 set(CMAKE_COGCXX_COMPILER_ENV_VAR "CXX")
 
 set(CMAKE_COGCXX_COMPILER_ID_RUN 1)
+set(CMAKE_COGCXX_SOURCE_FILE_EXTENSIONS cogc++;cogcpp;cogcxx;cogm;cogmm;cogCPP)
 set(CMAKE_COGCXX_IGNORE_EXTENSIONS inl;h;hpp;HPP;H;o;O;obj;OBJ;def;DEF;rc;RC)
-set(CMAKE_COGCXX_SOURCE_FILE_EXTENSIONS cogC;cogM;cogc++;cogcpp;cogcxx;cogm;cogmm;cogCPP)
 set(CMAKE_COGCXX_LINKER_PREFERENCE 70)
 
 set(LINKER_LANGUAGE C)
