--- a/CMakeModules/CMakeCOGCCompiler.cmake.in
+++ b/CMakeModules/CMakeCOGCCompiler.cmake.in
@@ -23,6 +23,7 @@ set(CMAKE_COGC_SOURCE_FILE_EXTENSIONS cogc)
 set(CMAKE_COGC_IGNORE_EXTENSIONS h;H;o;O;obj;OBJ;def;DEF;rc;RC)
 set(CMAKE_COGC_LINKER_PREFERENCE 50)
 
+set(LINKER_LANGUAGE C)
 # Save compiler ABI information.
 set(CMAKE_COGC_SIZEOF_DATA_PTR "@CMAKE_C_SIZEOF_DATA_PTR@")
 set(CMAKE_COGC_COMPILER_ABI "@CMAKE_C_COMPILER_ABI@")
