--- a/Examples/Simple_I2C/CMakeLists.txt
+++ b/Examples/Simple_I2C/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required (VERSION 3.0.0)
 
 if (NOT DEFINED PROPWARE_PATH)
-    set(PROPWARE_PATH $ENV{PROPWARE_PATH})
-    file(TO_CMAKE_PATH ${PROPWARE_PATH} PROPWARE_PATH)
-endif (NOT DEFINED PROPWARE_PATH)
+    file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)
+endif ()
 set(CMAKE_TOOLCHAIN_FILE ${PROPWARE_PATH}/PropellerToolchain.cmake)
 
 set(BOARD QUICKSTART)
