--- a/simple/cog/CMakeLists.txt
+++ b/simple/cog/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required (VERSION 3.0.0)
 
 if (NOT DEFINED PROPWARE_PATH)
-    set(PROPWARE_PATH $ENV{PROPWARE_PATH})
-    file(TO_CMAKE_PATH ${PROPWARE_PATH} PROPWARE_PATH)
+    file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)
 endif ()
 
 set(COMMON_FLAGS "-Os")
