--- a/CMakeModules/CMakeCOGCXXCompiler.cmake.in
+++ b/CMakeModules/CMakeCOGCXXCompiler.cmake.in
@@ -9,9 +9,9 @@ set(CMAKE_COGCXX_SIMULATE_VERSION "@CMAKE_CXX_SIMULATE_VERSION@")
 set(CMAKE_AR "@CMAKE_AR@")
 set(CMAKE_RANLIB "@CMAKE_RANLIB@")
 set(CMAKE_LINKER "@CMAKE_LINKER@")
-set(CMAKE_COMPILER_IS_GNUCC @CMAKE_COMPILER_IS_GNUCXX@)
+set(CMAKE_COMPILER_IS_GNUCC 1)
 set(CMAKE_COGCXX_COMPILER_LOADED 1)
-set(CMAKE_COGCXX_COMPILER_WORKS @CMAKE_CXX_COMPILER_WORKS@)
+set(CMAKE_COGCXX_COMPILER_WORKS 1)
 set(CMAKE_COGCXX_ABI_COMPILED @CMAKE_CXX_ABI_COMPILED@)
 set(CMAKE_COMPILER_IS_MINGW @CMAKE_COMPILER_IS_MINGW@)
 set(CMAKE_COMPILER_IS_CYGWIN @CMAKE_COMPILER_IS_CYGWIN@)
