--- a/CMakeModules/CMakeECOGCCompiler.cmake.in
+++ b/CMakeModules/CMakeECOGCCompiler.cmake.in
@@ -9,9 +9,9 @@ set(CMAKE_ECOGC_SIMULATE_VERSION "@CMAKE_C_SIMULATE_VERSION@")
 set(CMAKE_AR "@CMAKE_AR@")
 set(CMAKE_RANLIB "@CMAKE_RANLIB@")
 set(CMAKE_LINKER "@CMAKE_LINKER@")
-set(CMAKE_COMPILER_IS_GNUCC @CMAKE_COMPILER_IS_GNUCC@)
+set(CMAKE_COMPILER_IS_GNUCC 1)
 set(CMAKE_ECOGC_COMPILER_LOADED 1)
-set(CMAKE_ECOGC_COMPILER_WORKS @CMAKE_C_COMPILER_WORKS@)
+set(CMAKE_ECOGC_COMPILER_WORKS 1)
 set(CMAKE_ECOGC_ABI_COMPILED @CMAKE_C_ABI_COMPILED@)
 set(CMAKE_COMPILER_IS_MINGW @CMAKE_COMPILER_IS_MINGW@)
 set(CMAKE_COMPILER_IS_CYGWIN @CMAKE_COMPILER_IS_CYGWIN@)
