Hotfix for broken root environment variables; Cleaner CMakeLists.txt files; Docs updated

--- a/Examples/PropWare_HD44780/CMakeLists.txt
+++ b/Examples/PropWare_HD44780/CMakeLists.txt
@@ -1,7 +1,12 @@
-cmake_minimum_required (VERSION 3.0.0)
-
-file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)
-set(CMAKE_TOOLCHAIN_FILE ${PROPWARE_PATH}/PropellerToolchain.cmake)
+#############################################################################
+### Template code. Do not modify                                            #
+                                                                            #
+cmake_minimum_required (VERSION 3.0.0)                                      #
+# Aside from cmake_minimum_required, this must be the first two lines       #
+# of the file                                                               #
+file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)                       #
+set(CMAKE_TOOLCHAIN_FILE ${PROPWARE_PATH}/PropellerToolchain.cmake)         #
+#############################################################################
 
 set(BOARD QUICKSTART)
 set(MODEL lmm)
@@ -12,4 +17,9 @@ set(CXX_FLAGS )
 project(HD44780_Demo)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)
+
+#############################################################################
+### Template code. Do not modify                                            #
+                                                                            #
+include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                        #
+#############################################################################
