'Options' allow for finer-grain control over GCC flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.0.0)
 
-set(CMAKE_TOOLCHAIN_FILE ./PropellerToolchain.cmake)
+include(./CMakePropellerHeader.cmake)
 set(CMAKE_BUILD_TYPE None)
 
 project(PropWare C CXX ASM COGC COGCXX ECOGC ECOGCXX DAT)
