--- a/Examples/PropWare_L3G/CMakeLists.txt
+++ b/Examples/PropWare_L3G/CMakeLists.txt
@@ -1,12 +1,12 @@
-#############################################################################
-### Template code. Do not modify                                            #
-                                                                            #
-cmake_minimum_required (VERSION 3.0.0)                                      #
-# Aside from cmake_minimum_required, this must be the first two lines       #
-# of the file                                                               #
-file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)                       #
-set(CMAKE_TOOLCHAIN_FILE ${PROPWARE_PATH}/PropellerToolchain.cmake)         #
-#############################################################################
+################################################################################
+### Template code. Do not modify                                               #
+                                                                               #
+cmake_minimum_required (VERSION 3.0.0)                                         #
+# Aside from cmake_minimum_required, this must be the first two lines          #
+# of the file                                                                  #
+file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)                          #
+include(${PROPWARE_PATH}/CMakePropellerHeader.cmake)                           #
+################################################################################
 
 set(BOARD QUICKSTART)
 set(MODEL lmm)
@@ -18,8 +18,8 @@ project(L3G_Demo)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
 
-#############################################################################
-### Template code. Do not modify                                            #
-                                                                            #
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                        #
-#############################################################################
+################################################################################
+### Template code. Do not modify                                               #
+                                                                               #
+include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                           #
+################################################################################
