Implement bare-bones SeeedTFT class

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MCP3000)
 add_subdirectory(PropWare_MultiCogBlinky)
 add_subdirectory(PropWare_SD)
+add_subdirectory(PropWare_SeeedTFT)
 add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_SPI)
 add_subdirectory(Simple_I2C)
