--- a/PropWare/xmm-single/CMakeLists.txt
+++ b/PropWare/xmm-single/CMakeLists.txt
@@ -22,6 +22,8 @@ add_library(${PROJECT_NAME} STATIC
         ../PropWare
         ../sd
         ../seeedtft
+        ../seeedtftfast
+        ../seeedtftfast_as.S
         ../spi
         ../spi_as.S
         ../uart)
