Add floating point support to printf; Add global uart for printing; Binary size bloat!!!! :'(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required (VERSION 3.0.0)
 include(./CMakePropellerHeader.cmake)
 set(CMAKE_BUILD_TYPE None)
 
+set(PROPWARE_PRINT_FLOAT ON)
+
 project(PropWare C CXX ASM COGC COGCXX ECOGC ECOGCXX DAT)
 
 set(PROPWARE_MAIN_PACKAGE 1)
