--- a/Examples/Hello/CMakeLists.txt
+++ b/Examples/Hello/CMakeLists.txt
@@ -14,6 +14,8 @@ set(COMMON_FLAGS "-Os")
 set(C_FLAGS )
 set(CXX_FLAGS )
 
+set(PROPWARE_PRINT_FLOAT ON)
+
 project(Hello_Demo)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
