synchronous printer is getting so close!

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(Concurrency)
 add_subdirectory(Hello)
+add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(PropWare_DuplexUART)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_L3G)
@@ -10,5 +11,6 @@ add_subdirectory(PropWare_SD)
 add_subdirectory(PropWare_SeeedTFT)
 add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_SPI)
+add_subdirectory(PropWare_SynchronousPrinter)
 add_subdirectory(Simple_I2C)
 add_subdirectory(Simple_SimpleText)
