--- a/Examples/Libpropeller_Pwm32/CMakeLists.txt
+++ b/Examples/Libpropeller_Pwm32/CMakeLists.txt
@@ -14,10 +14,7 @@ set(COMMON_FLAGS "-Os")
 set(C_FLAGS )
 set(CXX_FLAGS )
 
-#set(PROPWARE_PRINT_FLOAT ON)
-set(LINK_TINY ON)
-
-project(Hello_Demo)
+project(PWM32_Demo)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
 
