--- a/PropWare/cmm/CMakeLists.txt
+++ b/PropWare/cmm/CMakeLists.txt
@@ -13,11 +13,6 @@ include(${PROPWARE_PATH}/SetPropWareFlags.cmake)
 project(PropWare_${MODEL})
 
 add_library(${PROJECT_NAME} STATIC
-        ../uart/abstractduplexuart
-        ../uart/abstractsimplexuart
-        ../uart/duplexuart
-        ../uart/fullduplexuart
-        ../uart/halfduplexuart
         ../hd44780
         ../l3g
         ../max6675
@@ -27,11 +22,19 @@ add_library(${PROJECT_NAME} STATIC
         ../printcapable
         ../printer
         ../PropWare
+        ../scancapable
+        ../scanner
         ../sd
         ../seeedtft
         ../seeedtftfast
         ../seeedtftfast_as.S
-        ../uart/simplexuart
         ../spi
         ../spi_as.S
+        ../uart/abstractduplexuart
+        ../uart/abstractsimplexuart
+        ../uart/duplexuart
+        ../uart/fullduplexuart
+        ../uart/halfduplexuart
+        ../uart/simplexuart
+        ../uart/sharedsimplexuart
         ../uart/uart)
