--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -7,7 +7,8 @@ add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MCP3000)
 add_subdirectory(PropWare_MultiCogBlinky)
-add_subdirectory(PropWare_SD)
+add_subdirectory(PropWare_Scanner)
+#add_subdirectory(PropWare_SD)
 add_subdirectory(PropWare_SeeedTFT)
 add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_SPI)
