Begin complete refactor of SD

--- a/PropWare/cmm/CMakeLists.txt
+++ b/PropWare/cmm/CMakeLists.txt
@@ -14,6 +14,8 @@ include_directories(${PROPWARE_PATH})
 project(PropWare_${MODEL})
 
 add_library(${PROJECT_NAME} STATIC
+        ../blockstorage
+        ../fatfs
         ../hd44780
         ../l3g
         ../max6675
@@ -29,7 +31,6 @@ add_library(${PROJECT_NAME} STATIC
         ../seeedtft
         ../seeedtftfast
         ../seeedtftfast_as.S
-#        ../shell
         ../spi
         ../spi_as.S
         ../synchronousprinter
