--- a/PropWare/xmm-split/CMakeLists.txt
+++ b/PropWare/xmm-split/CMakeLists.txt
@@ -16,6 +16,7 @@ project(PropWare_${MODEL})
 add_library(${PROJECT_NAME} STATIC
         ../blockstorage
         ../fatfs
+        ../filesystem
         ../hd44780
         ../l3g
         ../max6675
