Scanner now fully functional! New examples; Stream-like functionality in Printer

--- a/PropWare/cmm/CMakeLists.txt
+++ b/PropWare/cmm/CMakeLists.txt
@@ -24,7 +24,7 @@ add_library(${PROJECT_NAME} STATIC
         ../pin
         ../port
         ../printcapable
-        ../printer
+        ../printer/printer
         ../PropWare
         ../scancapable
         ../scanner
