--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -12,7 +12,11 @@ add_subdirectory(PropWare_Scanner)
 #add_subdirectory(PropWare_SD)
 add_subdirectory(PropWare_SeeedTFT)
 add_subdirectory(PropWare_SimplexUART)
+add_subdirectory(PropWare_Simple_Hybrid)
 add_subdirectory(PropWare_SPI)
 add_subdirectory(PropWare_SynchronousPrinter)
+add_subdirectory(PropWare_Utility)
+#add_subdirectory(Simple_AdcAcPropAb)
+add_subdirectory(Simple_FdSerial)
 add_subdirectory(Simple_I2C)
 add_subdirectory(Simple_SimpleText)
