Add a mostly-working version of Runnable

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MCP3000)
 add_subdirectory(PropWare_MultiCogBlinky)
+add_subdirectory(PropWare_Runnable)
 add_subdirectory(PropWare_Scanner)
 #add_subdirectory(PropWare_SD)
 add_subdirectory(PropWare_SeeedTFT)
