--- a/PropWare/xmmc/CMakeLists.txt
+++ b/PropWare/xmmc/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(${PROJECT_NAME} STATIC
         ../printer/printer
         ../printer/synchronousprinter
         ../PropWare
+        ../runnable
         ../scancapable
         ../scanner
         ../seeedtft
