--- a/Examples/Hello/CMakeLists.txt
+++ b/Examples/Hello/CMakeLists.txt
@@ -23,8 +23,4 @@ add_executable(${PROJECT_NAME}
     ${PROJECT_NAME}
     pst.dat)
 
-################################################################################
-### Template code. Do not modify                                               #
-                                                                               #
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                           #
-################################################################################
+createTopProject(${PROJECT_NAME})
