--- a/libpropeller/source/cmm/CMakeLists.txt
+++ b/libpropeller/source/cmm/CMakeLists.txt
@@ -11,7 +11,7 @@ set(MODEL cmm)
 project(Libpropeller_${MODEL})
 include(../libpropellerObjects.cmake)
 
-include(${PROPWARE_PATH}/SetPropWareFlags.cmake)
+include(${PROPWARE_PATH}/CMakePropellerSetFlags.cmake)
 include_directories(${PROPWARE_PATH})
 add_library(${PROJECT_NAME} STATIC ${LIBPROPELLER_OBJECTS})
 
