--- a/libpropeller/source/cog/CMakeLists.txt
+++ b/libpropeller/source/cog/CMakeLists.txt
@@ -12,6 +12,6 @@ set(MODEL cog)
 project(Libpropeller_${MODEL})
 include(../libpropellerObjects.cmake)
 
-include(${PROPWARE_PATH}/SetPropWareFlags.cmake)
+include(${PROPWARE_PATH}/CMakePropellerSetFlags.cmake)
 include_directories(${PROPWARE_PATH})
 add_library(${PROJECT_NAME} STATIC ${LIBPROPELLER_OBJECTS})
