--- a/Examples/PropWare_MAX6675/CMakeLists.txt
+++ b/Examples/PropWare_MAX6675/CMakeLists.txt
@@ -18,8 +18,4 @@ project(MAX6675_Demo)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
 
-################################################################################
-### Template code. Do not modify                                               #
-                                                                               #
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                           #
-################################################################################
+createTopProject(${PROJECT_NAME})
