--- a/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
+++ b/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
@@ -22,8 +22,4 @@ project(Hybrid_Demo)
 add_executable(${PROJECT_NAME}
     ${PROJECT_NAME})
 
-################################################################################
-### Template code. Do not modify                                               #
-                                                                               #
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                           #
-################################################################################
+createTopProject(${PROJECT_NAME})
