--- a/Examples/Simple_FdSerial/CMakeLists.txt
+++ b/Examples/Simple_FdSerial/CMakeLists.txt
@@ -18,8 +18,4 @@ project(FdSerial_Demo C CXX DAT)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME} pst.dat)
 
-################################################################################
-### Template code. Do not modify                                               #
-                                                                               #
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                           #
-################################################################################
+createTopProject(${PROJECT_NAME})
