--- a/Examples/Simple_I2C/CMakeLists.txt
+++ b/Examples/Simple_I2C/CMakeLists.txt
@@ -18,8 +18,4 @@ project(I2C_Demo)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
 
-################################################################################
-### Template code. Do not modify                                               #
-                                                                               #
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                           #
-################################################################################
+createTopProject(${PROJECT_NAME})
