--- a/PropWare/tests/sd/CMakeLists.txt
+++ b/PropWare/tests/sd/CMakeLists.txt
@@ -18,8 +18,4 @@ project(sd_test)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
 
-################################################################################
-### Template code. Do not modify                                               #
-                                                                               #
-include(${PROPWARE_PATH}/CMakePropellerFooter.cmake)                           #
-################################################################################
+createTopProject(${PROJECT_NAME})
