Addition of create_simple_executable and create_executable

--- a/Examples/Hello/CMakeLists.txt
+++ b/Examples/Hello/CMakeLists.txt
@@ -19,8 +19,6 @@ set(LINK_TINY ON)
 
 project(Hello_Demo C CXX DAT)
 
-add_executable(${PROJECT_NAME}
+create_simple_executable(${PROJECT_NAME}
     ${PROJECT_NAME}
     pst.dat)
-
-createTopProject(${PROJECT_NAME})
