--- a/Examples/Libpropeller_Pwm32/CMakeLists.txt
+++ b/Examples/Libpropeller_Pwm32/CMakeLists.txt
@@ -16,6 +16,4 @@ set(CXX_FLAGS )
 
 project(PWM32_Demo)
 
-add_executable(${PROJECT_NAME} ${PROJECT_NAME})
-
-createTopProject(${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
