--- a/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
+++ b/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
@@ -19,7 +19,5 @@ set(LINK_TINY ON)
 
 project(Hybrid_Demo)
 
-add_executable(${PROJECT_NAME}
+create_simple_executable(${PROJECT_NAME}
     ${PROJECT_NAME})
-
-createTopProject(${PROJECT_NAME})
