--- a/Examples/Simple_AdcAcPropAb/CMakeLists.txt
+++ b/Examples/Simple_AdcAcPropAb/CMakeLists.txt
@@ -9,13 +9,11 @@ include(${PROPWARE_PATH}/CMakePropellerHeader.cmake)                           #
 ################################################################################
 
 set(BOARD QUICKSTART)
-set(MODEL lmm)
+set(MODEL cog)
 set(COMMON_FLAGS "-Os")
 set(C_FLAGS )
 set(CXX_FLAGS )
 
-project(fatfs_test)
+project(AdcAcPropAb_Demo)
 
-add_executable(${PROJECT_NAME} ${PROJECT_NAME})
-
-createTopProject(${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
