Random cleanup; Aggregate propware cmake sources list to parent file

--- a/PropWare/tests/CMakeLists.txt
+++ b/PropWare/tests/CMakeLists.txt
@@ -19,3 +19,4 @@ create_executable(pin_test              pin_test)
 create_executable(fatfs_test            fatfs_test)
 create_executable(uart_simplex_test     uart_simplex_test)
 create_executable(sd_test               sd_test)
+create_executable(queue_test            queue_test)
