--- a/PropWare/xmmc/CMakeLists.txt
+++ b/PropWare/xmmc/CMakeLists.txt
@@ -13,33 +13,4 @@ include_directories(${PROPWARE_PATH})
 
 project(PropWare_${MODEL})
 
-add_library(${PROJECT_NAME} STATIC
-        ../blockstorage
-        ../fatfs
-        ../filesystem
-        ../hd44780
-        ../l3g
-        ../max6675
-        ../mcp3000
-        ../pin
-        ../port
-        ../printcapable
-        ../printer/printer
-        ../printer/synchronousprinter
-        ../PropWare
-        ../runnable
-        ../scancapable
-        ../scanner
-        ../seeedtft
-        ../seeedtftfast
-        ../seeedtftfast_as.S
-        ../spi
-        ../spi_as.S
-        ../uart/abstractduplexuart
-        ../uart/abstractsimplexuart
-        ../uart/duplexuart
-        ../uart/fullduplexuart
-        ../uart/halfduplexuart
-        ../uart/simplexuart
-        ../uart/sharedsimplexuart
-        ../uart/uart)
+add_library(${PROJECT_NAME} STATIC ${PROPWARE_SOURCES})
