Use template parameters in SPI's shift_in methods

--- a/PropWare/tests/CMakeLists.txt
+++ b/PropWare/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ include(${PROPWARE_PATH}/CMakePropellerHeader.cmake)                           #
 ################################################################################
 
 set(BOARD QUICKSTART)
-set(MODEL lmm)
+set(MODEL cmm)
 set(COMMON_FLAGS "-Os")
 
 project(propware_tests)
