Working toward opening a file; SD's write_data_block is busted

--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(PROPWARE_SOURCES
         ../blockstorage
+        ../fatfile
         ../fatfs
+        ../file
         ../filesystem
         ../hd44780
         ../l3g
