Separate read and write file ops into individual classes

--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -1,39 +1,43 @@
 set(PROPWARE_SOURCES
-        ../c++allocate.h
-        ../filesystem/blockstorage
-        ../filesystem/fatfile
-        ../filesystem/fatfs
-        ../filesystem/file
-        ../filesystem/filesystem
-        ../hd44780
-        ../l3g
-        ../max6675
-        ../mcp3000
-        ../pin
-        ../port
-        ../printcapable
-        ../printer/printer
-        ../printer/synchronousprinter
-        ../PropWare
-        ../queue
-        ../runnable
-        ../scancapable
-        ../scanner
-        ../filesystem/sd
-        ../seeedtft
-        ../seeedtftfast
-        ../seeedtftfast_as.S
-        ../spi
-        ../spi_as.S
-        ../uart/abstractduplexuart
-        ../uart/abstractsimplexuart
-        ../uart/duplexuart
-        ../uart/fullduplexuart
-        ../uart/halfduplexuart
-        ../uart/simplexuart
-        ../uart/sharedsimplexuart
-        ../uart/uart
-        ../utility)
+    ../c++allocate.h
+    ../filesystem/blockstorage
+    ../filesystem/fat/fatfile
+    ../filesystem/fat/fatfilereader
+    ../filesystem/fat/fatfilewriter
+    ../filesystem/fat/fatfs
+    ../filesystem/file
+    ../filesystem/filereader
+    ../filesystem/filesystem
+    ../filesystem/filewriter
+    ../hd44780
+    ../l3g
+    ../max6675
+    ../mcp3000
+    ../pin
+    ../port
+    ../printcapable
+    ../printer/printer
+    ../printer/synchronousprinter
+    ../PropWare
+    ../queue
+    ../runnable
+    ../scancapable
+    ../scanner
+    ../filesystem/sd
+    ../seeedtft
+    ../seeedtftfast
+    ../seeedtftfast_as.S
+    ../spi
+    ../spi_as.S
+    ../uart/abstractduplexuart
+    ../uart/abstractsimplexuart
+    ../uart/duplexuart
+    ../uart/fullduplexuart
+    ../uart/halfduplexuart
+    ../uart/simplexuart
+    ../uart/sharedsimplexuart
+    ../uart/uart
+    ../utility)
 
 add_subdirectory(cmm)
 add_subdirectory(lmm)
