Remove `const` from PrintCapable's methods; Add tell & seek

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(Concurrency)
 add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(PropWare_DuplexUART)
-add_subdirectory(PropWare_FatFS)
+add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
