[Close #27] Create StringBuilder classes

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(PropWare_Utility)
 add_subdirectory(Simple_FdSerial)
 add_subdirectory(Simple_I2C)
 add_subdirectory(Simple_SimpleText)
+add_subdirectory(PropWare_StringBuilder)
