FatFileWriter now compiles

--- a/PropWare/tests/CMakeLists.txt
+++ b/PropWare/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ project(propware_tests)
 create_executable(sample_test           sample_test)
 create_executable(pin_test              pin_test)
 create_executable(fatfilereader_test    fatfilereader_test)
+create_executable(fatfilewriter_test    fatfilewriter_test)
 create_executable(fatfs_test            fatfs_test)
 create_executable(uart_simplex_test     uart_simplex_test)
 create_executable(sd_test               sd_test)
