Movement toward proper installation
* Download Windows and Linux CMake binaries
* Install PropWare CMake files into CMake installation
* Only package only headers and libraries for PropWare

Known issues:
* dat files will fail because Python script isn't included
* No easy way to include all the PropWare CMake files (need FindPropWare.cmake file)

--- a/PropWare/lmm/CMakeLists.txt
+++ b/PropWare/lmm/CMakeLists.txt
@@ -9,8 +9,8 @@ set(C_FLAGS )
 set(CXX_FLAGS )
 set(MODEL lmm)
 include(${PROPWARE_PATH}/CMakePropellerSetFlags.cmake)
-include_directories(${PROPWARE_PATH})
 
-project(PropWare_${MODEL})
-
-add_library(${PROJECT_NAME} STATIC ${PROPWARE_SOURCES})
+add_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
+install(TARGETS PropWare_${MODEL}
+    DESTINATION PropWare/lib
+    COMPONENT propware)
