--- a/libpropeller/source/cmm/CMakeLists.txt
+++ b/libpropeller/source/cmm/CMakeLists.txt
@@ -7,4 +7,6 @@ set(MODEL cmm)
 
 include(${PROJECT_SOURCE_DIR}/CMakePropellerSetFlags.cmake)
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
-
+install(TARGETS Libpropeller_${MODEL}
+    DESTINATION PropWare/lib
+    COMPONENT propware)
