--- a/libpropeller/source/cog/CMakeLists.txt
+++ b/libpropeller/source/cog/CMakeLists.txt
@@ -7,3 +7,6 @@ set(MODEL cog)
 
 include(${PROJECT_SOURCE_DIR}/CMakePropellerSetFlags.cmake)
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
+install(TARGETS Libpropeller_${MODEL}
+    DESTINATION PropWare/lib
+    COMPONENT propware)
