--- a/libpropeller/source/lmm/CMakeLists.txt
+++ b/libpropeller/source/lmm/CMakeLists.txt
@@ -7,4 +7,7 @@ set(MODEL lmm)
 
 include(${PROJECT_SOURCE_DIR}/CMakePropellerSetFlags.cmake)
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
+install(TARGETS Libpropeller_${MODEL}
+    DESTINATION PropWare/lib
+    COMPONENT propware)
 
