--- a/simple/CMakeLists.txt
+++ b/simple/CMakeLists.txt
@@ -1,3 +1,6 @@
+file(GLOB SIMPLE_OBJECTS
+    ${PROJECT_SOURCE_DIR}/simple/*.[!t])
+
 add_subdirectory(cog)
 add_subdirectory(cmm)
 add_subdirectory(lmm)
